dnl $Id: Exp $
dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.53)

AC_INIT([genesis], [1.0], [ederbsd@gmail.com])
AC_CONFIG_SRCDIR(genesis/genesis.hpp)
AC_CONFIG_AUX_DIR(config)

AC_CANONICAL_HOST
AC_PROG_MAKE_SET

AM_INIT_AUTOMAKE
AM_CONFIG_HEADER(config.h)

dnl Force compiler to clang.
CC=clang
CXX=clang++

# I am not sure why this is here or if it is needed.
#CPP="clang -E"

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LIBTOOL

AC_LANG_SAVE
AC_LANG_CPLUSPLUS

AC_C_BIGENDIAN

dnl Checks for library functions.
AC_LANG_RESTORE

dnl Checks for functions.
AC_CHECK_FUNC(trunc)
AC_CHECK_FUNCS(isnan _isnan)

dnl Check system type.
AC_MSG_CHECKING([[for target host OS]])
case "$host_os" in
*darwin* | *rhapsody* | *macosx*)
     AC_DEFINE_UNQUOTED(OSX,1,[This is an OS X system])
     mhd_host_os='Darwin'
     AC_MSG_RESULT([[$mhd_host_os]])
     ;;
*freebsd*)
     AC_DEFINE_UNQUOTED(FREEBSD,1,[This is a FreeBSD system])
     mhd_host_os='FreeBSD'
     AC_MSG_RESULT([[$mhd_host_os]])
     LDFLAGS="$LDFLAGS -lpthread -lrt "
     ;;
*linux*)
     AC_DEFINE_UNQUOTED(LINUX,1,[This is a Linux kernel])
     mhd_host_os='Linux'
     AC_MSG_RESULT([[$mhd_host_os]])
     LDFLAGS="$LDFLAGS -ldl -lpthread -lrt "
     ;;
*)
     mhd_host_os='Unrecognised OS'
     AC_MSG_RESULT([[$mhd_host_os]])
     AC_MSG_WARN([Unrecognised OS $host_os])
     AC_DEFINE_UNQUOTED(OTHEROS,1,[Some strange OS])
;;
esac

dnl Enable release librarie.
AC_ARG_ENABLE(release,
        [If enable sets the release compile configuration on],
        [case "${enableval}" in
                yes) CXXFLAGS="-DNDEBUG -g -O3 ";;
                no) ;;
                *) AC_MSG_ERROR(bad value $(enableeval) for --enable-release) ;;
        esac],
        [])

dnl Set flags for compiler.
CXXFLAGS="$CXXFLAGS -Wall -DGEN_TLOG -DGEN_NANO_SECOND_SLEEP "
LIBS="$LIBS "

dnl --preserve-timestamps
INSTALL_DATA="$INSTALL_DATA "

dnl Generate files
AC_OUTPUT([
 Makefile
 genesis/Makefile
 tools/Makefile
 tools/genesis_convex_hull/Makefile
 tools/genesis_geodist/Makefile
 doc/Makefile
 test/Makefile
])
