INCLUDES = -I $(top_srcdir)

lib_LTLIBRARIES = libgenesis.la

libgenesis_la_SOURCES = \
	genesis.cpp \
        clsid.cpp \
	unknown.cpp \
	factory.cpp \
	loadable.cpp \
	logger.cpp \
	application.cpp \
	lexical_cast.cpp \
	string_util.cpp \
	cmd_line_parser.cpp \
	config.cpp \
	list.cpp \
	datetime.cpp \
	calendar.cpp \
	sort.cpp \
	array.cpp \
	maths.cpp \
	set.cpp \
	set_cover.cpp \
	bit.cpp \
	tests.cpp \
	bitree.cpp \
	geometry.cpp \
	convex_hull.cpp \
	plotting.cpp \
	system.cpp \
	thread.cpp \
	events.cpp \
	mutex.cpp

pkginclude_HEADERS = \
	genesis.hpp \
	clsid.hpp \
	unknown.hpp \
	factory.hpp \
	loadable.hpp \
	exception.hpp \
	logger.hpp \
	nullstream.hpp \
	proto_types.hpp \
	application.hpp \
	string_util.hpp \
	lexical_cast.hpp \
	cmd_line_parser.hpp \
	config.hpp \
	list.hpp \
	datetime.hpp \
	calendar.hpp \
	sort.hpp \
	array.hpp \
	maths.hpp \
	set.hpp \
	set_cover.hpp \
	bit.hpp \
	tests.hpp \
	bitree.hpp \
	geometry.hpp \
	convex_hull.hpp \
	plotting.hpp \
	system.hpp \
	thread.hpp \
	events.hpp \
	mutex.hpp

